# search-engine

./: .dockerignore  .env  .gitignore  README.md  compose.ec2.yaml  compose.local.yaml  compose.yaml  flake.nix
app/: Dockerfile  README.md  main.py  requirements.txt  utils.py
app/static/css/: index.css  no_results.css  results.css  style.css
app/static/js/: index.js  results.js
app/templates/: index.html  no_results.html  results.html
app/tests/: test_utils.py
app/tests/fixtures/: wikipedia_article.html
crawler/: Cargo.toml  Dockerfile  compose.ec2.yaml  compose.local.yaml  compose.yaml  docker-compose.yml  flake.nix  flyway.toml  sites.txt
crawler/benches/: crawler.rs
crawler/benches/files/: page3.html
crawler/flyway/conf/: flyway.toml
crawler/flyway/sql/: V4__Add_is_crawled_flag.sql
crawler/migrations/: V3__Add_title_col.sql
crawler/src/: crawler.rs  error.rs  lib.rs  main.rs  page.rs  page_queue.rs  utils.rs
crawler/src/fixtures/: extract_multiple_hrefs.html
crawler/src/test-files/: appropriate-site.html  extract_multiple_hrefs.html  extract_single_href.html  page_with_title.html
crawler/src/test-files/benchmarks/: index.html  page1.html  page2.html  page3.html
flyway/sql/: V5__Create_null_html_col.sql
migrations/: 01_create_page_table.sql  02_remove_http_status_col.sql  03_add_title_col.sql  04_add_is_crawled_flag.sql  05_create_null_html_col.sql  06_create_is_indexed_col.sql  06_create_terms_table.sql  07_change_idf_to_float.sql  07_create_page_index.sql  07_create_terms_table.sql  08_rename_term_table_to_terms.sql
services/: Cargo.toml  README.md
services/crawler/: .dockerignore  Cargo.toml  Dockerfile  README.md  sites.txt
services/crawler/benches/: crawler.rs
services/crawler/src/: crawler.rs  db.rs  error.rs  lib.rs  main.rs  page.rs  url_handler.rs  utils.rs
services/crawler/src/fixtures/: extract_single_href.html
services/crawler/tests/: common.rs  crawler.rs
services/crawler/tests/fixtures/: dummy_data.sql
services/tf-idf-indexer/: Cargo.toml  Dockerfile  README.md
services/tf-idf-indexer/src/: db.rs  lib.rs  main.rs
services/tf-idf-indexer/tests/: common.rs  indexer.rs
services/tf-idf-indexer/tests/fixtures/: test_parse_page_with_existing_terms.sql
services/tf-idf-indexer/tests/indexer/: add_term.rs  mod.rs  parse_page.rs
services/utils/: Cargo.toml
services/utils/src/: lib.rs
services/utils/tests/: common.rs  utils.rs
tf-idf-indexer/: Cargo.toml  Dockerfile
tf-idf-indexer/src/: lib.rs  main.rs  utils.rs
tf-idf-indexer/src/fixtures/: filter_stop_words.html  tf.html
tf-idf-indexer/src/test-files/: tf.html
tf-idf-indexer/tests/: common.rs  indexer.rs  integration.rs  tests.rs
tf-idf-indexer/tests/fixtures/: dummy_data.sql  dummy_pages.sql  refresh_queue.sql  test_parse_page_with_existing_terms.sql
