[package]
name = "crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["gzip"] }
scraper = "0.24.0"
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
log = "0.4.28"
flexi_logger = "0.31.2"
thiserror = "2.0.17"
httpmock = "0.8.0"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }

[[bench]]
name = "crawler"
harness = false

[features]
bench = []
