[package]
name = "crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
flexi_logger = { workspace = true }
url = { workspace = true }
utils = { path = "../utils" }
reqwest = { version = "0.12.23", features = ["gzip"] }
scraper = "0.24.0"
thiserror = "2.0.17"
httpmock = "0.8.0"
rustrict = "0.7.36"
once_cell = "1.21.3"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }

[[bench]]
name = "crawler"
harness = false

[features]
bench = []
logging = []
