[package]
name = "crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
sqlx = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
flexi_logger = { workspace = true }
url = { workspace = true }
scraper = { workspace = true }
once_cell = { workspace = true }
reqwest = { version = "0.12.24", features = ["gzip"] }
thiserror = "2.0.17"
httpmock = "0.8.2"
rustrict = "0.7.36"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }

# Necessary for criterion benchmarks (DO NOT REMOVE)
[[bench]]
name = "crawler"
harness = false

[features]
logging = []
