[package]
name = "tf-idf-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { workspace = true }
log = { workspace = true }
flexi_logger = { workspace = true }
tokio = { workspace = true }
criterion = "0.7.0"
once_cell = "1.21.3"
ordered-float = "5.1.0"
scraper = "0.24.0"
stop-words = "0.9.0"
url = "2.5.7"

[dev-dependencies]
testcontainers-modules = { version = "0.13.0", features = ["postgres", "blocking"] }

[features]
logging = []
