[package]
name = "tf-idf-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { workspace = true }
log = { workspace = true }
flexi_logger = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
scraper = { workspace = true }
utils = { path = "../utils" }
once_cell = { workspace = true }
criterion = "0.7.0"
ordered-float = "5.1.0"
stop-words = "0.9.0"
anyhow = "1.0.100"
async-trait = "0.1.89"

[dev-dependencies]
testcontainers-modules = { workspace = true }

[features]
logging = []
